# cs5250-fat

./: .gitignore  CMakeLists.txt  common.c  common.h  copy_from_image.c  copy_from_image.h  copy_from_local.c  copy_from_local.h  fat.h  inspection.c  inspection.h  list.c  list.h  main.c  remove.c  remove.h
